    this function after remctl_new and before remctl_open to set the
    Kerberos credential cache that will be used for client authentication,
    overriding KRB5CCNAME.  Be aware that this will normally change the
    default credential cache for all other GSS-API operations in this
    context or thread, not just for that remctl object, due to GSS-API
    limitations.

    Close a client memory leak caused by the GSS-API context not being
    freed by the client in remctl_close.

    remctld can be configured to pass the subcommand on standard input,
    but the documentation said this was not allowed.  Fix the
    documentation to match the implementation.

    Use PATH_KRB5_CONFIG as the environment variable to set the path to
    krb5-config rather than KRB5_CONFIG when running configure, since the
    latter is used by the Kerberos libraries to specify an alternative
    path to krb5.conf.

    Update to rra-c-util 3.9:

    * Add notices in each file copied from rra-c-util.
    * Prefer gssapi/gssapi.h to gssapi.h.
    * Include strings.h if it exists for strncasecmp on some platforms.
    * getaddrinfo replacement now portable to systems with bad netdb.h.
    * Avoid krb5-config if --with-gssapi-{include,lib} are given.
    * Add Windows implementation of fdflag_nonblocking.
    * The network_connect utility functions now take an optional timeout.
    * Wait longer for remctld to start in remctl tests.
    * Use an atexit handler to clean up after Kerberos tests.
    * Use typedef instead of #define for socklen_t and sig_atomic_t.
    * Stop providing or using INADDR_LOOPBACK for portability reasons.

    Update to C TAP Harness 1.8:

    * Add bmalloc, bcalloc, brealloc, and bstrdup TAP library functions.
    * Fix runtests to still honor SOURCE and -s without BUILD and -b.

remctl 2.18 (2011-05-31)

    Fix uninitialized variable in the remctld standalone server code that
    could cause all remote connections to fail and add a more complete